[tool.poetry]
name = "vonsneg"
version = "0.1.0"
description = "Turnip28 Combat Simulator"
authors = ["Alex Sipiere <alex.sipiere@protonmail.ch>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
pandas = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pre-commit = "^3.3.2"
bandit = "^1.7.5"
black = "^23.3.0"
pylint = "^2.17.4"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
