[project]
name = "vonsneg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.5.2",
    "icepool>=2.0.2",
]
[tool.ruff.lint]
select = ["ALL"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.3",
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
